--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "typescript": "~5.8.3",
     "vite": "^7.1.2",
     "vue-tsc": "^3.0.5"
+  },
+  "engines": {
+    "node": ">=20.19.0"
   }
 }
